--- a/styles.css
+++ b/styles.css
@@ -1,98 +1,140 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	color: #fff;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'poppins',sans-serif;
+}
+section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+    
+    background: url("img.jpg")no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.form-box{
+    position: relative;
+    width: 400px;
+    height: 450px;
+    background: transparent;
+    border: 2px solid rgba(255,255,255,0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.form-boxes{
+    position: relative;
+    width: 400px;
+    height: 600px;
+    background: transparent;
+    border: 2px solid rgba(255,255,255,0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+h2{
+    font-size: 2em;
+    color: #fff;
+    text-align: center;
+}
+h3{
+    font-size: 9em;
+    color: #fff;
+    text-align: center;
+}
+.inputbox{
+    position: relative;
+    margin: 30px 0;
+    width: 310px;
+    border-bottom: 2px solid #fff;
+}
+.inputbox label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    color: #fff;
+    font-size: 1em;
+    pointer-events: none;
+    transition: .5s;
+}
+input:focus ~ label,
+input:valid ~ label{
+top: -5px;
+}
+.inputbox input {
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    padding:0 35px 0 5px;
+    color: #fff;
+}
+.inputbox ion-icon{
+    position: absolute;
+    right: 8px;
+    color: #fff;
+    font-size: 1.2em;
+    top: 20px;
+}
+.forget{
+    margin: -15px 0 15px ;
+    font-size: .9em;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;  
+    
 }
 
-html,
-body {
-	width: 100%;
-	height: 100vh;
-	overflow: hidden;
-	background: #000;
+.forget label input{
+    margin-right: 3px;
+    
 }
-
-h1.header {
-	font-family: "Bigilla" !important;
-	font-size: 200px;
-	text-transform: uppercase;
-	font-weight: bolder;
-	width: 90%;
+.forget label a{
+    color: #fff;
+    text-decoration: none;
 }
-
-.header .letter {
-	display: inline-block;
-	line-height: 1em;
+.forget label a:hover{
+    text-decoration: underline;
 }
-
-.titles {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+button{
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    background: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 600;
 }
-
-h1 {
-	font-weight: 500;
-	font-size: 240px;
-	font-family: "Barracuda" !important;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+.register{
+    font-size: .9em;
+    color: #fff;
+    text-align: center;
+    margin: 25px 0 10px;
 }
-
-ul.titles {
-	display: flex;
+.register p a{
+    text-decoration: none;
+    color: #fff;
+    font-weight: 600;
 }
-
-ul.blocks {
-	margin: 0;
-	padding: 0;
-	display: flex;
-	width: 100%;
-	height: 100vh;
-	list-style: none;
-	justify-content: center;
-	align-items: center;
+.register p a:hover{
+    text-decoration: underline;
 }
-
-li.block {
-	height: 100vh;
-}
-
-.block-1 {
-	width: 0.2%;
-	margin: 0 10px;
-	background: #da0510;
-}
-
-.block-2 {
-	width: 1.4%;
-	margin: 0 200px 0 20px;
-	background: #2001fe;
-}
-
-.block-3 {
-	width: 0.8%;
-	margin: 0 40px;
-	background: #01fefe;
-}
-
-.block-4 {
-	width: 2%;
-	margin: 0 400px;
-	background: #00fe00;
-}
-
-.block-5 {
-	width: 0.8%;
-	margin: 0 20px;
-	background: #f4f315;
-}
-
-.block-6 {
-	width: 2.8%;
-	background: #fa04f9;
+button a
+{
+   text-decoration:none;
+   color:black;
 }
